# workspace

./: .dockerignore  .env.example  .env.hp.example  .gitignore  Makefile  README.md  TECH_STACK.md  fix_keycloak_ssl.sh  install.sh  seed_demo.py
.github/workflows/: chaos-drill.yml  ci.yml  maintenance-page.yml
assistant/: .env.example  .env.hp.example  Makefile  README.md  docker-compose.yml  setup_keycloak_client.sh
assistant/backend/: Dockerfile  agent.py  auth.py  config.py  db.py  degraded.py  doc_intelligence.py  (+17 more)
backup/: backup.sh  restore.sh
calendar/: .env.example  Makefile  docker-compose.yml
docs/: PORTS.md  api-contracts.md
forge/: .env.example  .env.hp.example  Makefile  README.md  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.yml  package.json  setup.sh
gateway/: .env.example  .env.hp.example  Makefile  README.md  docker-compose.yml  litellm_config.yaml  sync_free_models.py
mempalace/: .env.example  .env.hp.example  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
observability/: docker-compose.yml
oria/: .env.example  .env.hp.example  .gitignore  CAHIER_DES_CHARGES.md  CLAUDE.md  PITCH.md  README.md  claude-progress.txt  docker-compose.prod.yml  docker-compose.yml  feature-list.json  requirements.txt  vercel.json
shared/: pyproject.toml
shared-ui/: README.md  package.json
shared/agent_personnel_shared/: __init__.py  fastapi_setup.py  health.py  http_client.py  jobs.py  keycloak_auth.py  redis_client.py
toolhub/: .env.example  docker-compose.yml
(+799 files in other folders)
